--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
   <head>
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.min.css" />
-    <link rel="stylesheet" href="css/brands.min.css" />
     <link rel="stylesheet" href="css/style.css" />
     <title>EgyptianParty</title>
   </head>
@@ -142,11 +141,11 @@
               <p><i class="fa fa-phone"></i> 001-000-000-000</p>
             </div>
             <div class="social-list">
-              <i class="fab fa-twitter fa-fw"></i>
-              <i class="fab fa-facebook-f fa-fw"></i>
-              <i class="fab fa-instagram fa-fw"></i>
-              <i class="fab fa-dribbble fa-fw"></i>
-              <i class="fab fa-pinterest fa-fw"></i>
+              <i class="fa fa-brands fa-twitter"></i>
+              <i class="fa fa-brands fa-facebook"></i>
+              <i class="fa fa-brands fa-instagram"></i>
+              <i class="fa fa-brands fa-dribbble"></i>
+              <i class="fa fa-brands fa-pinterest"></i>
             </div>
           </div>
 
