Egyption party website

--- a/index.html
+++ b/index.html
@@ -1,9 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
     <link rel="stylesheet" href="css/bootstrap.min.css" />
-    <link rel="stylesheet" href="css/all.min.css" />
-    <link rel="stylesheet" href="css/font-awesome.min.css" />
+    <!-- <link rel="stylesheet" href="css/all.min.css" />
+    <link rel="stylesheet" href="css/brands.css">
+    <link rel="stylesheet" href="css/fontawesome.min.css" />
+  -->
     <link rel="stylesheet" href="css/style.css" />
     <title>EgyptianParty</title>
   </head>
@@ -142,11 +148,11 @@
               <p><i class="fa fa-phone"></i> 001-000-000-000</p>
             </div>
             <div class="social-list">
-              <i class="fa fa-brands fa-twitter"></i>
-              <i class="fa fa-brands fa-facebook"></i>
-              <i class="fa fa-brands fa-instagram"></i>
-              <i class="fa fa-brands fa-dribbble"></i>
-              <i class="fa fa-brands fa-pinterest"></i>
+              <i class="fa fa-twitter"></i>
+              <i class="fa fa-facebook"></i>
+              <i class="fa fa-instagram"></i>
+              <i class="fa fa-dribbble"></i>
+              <i class="fa fa-pinterest"></i>
             </div>
           </div>
 
